# ferrous

./: .gitignore  .mailmap  CLAUDE.md  Cargo.toml  README.md  claude.md  monitor.sh  txgen.sh
.cargo/: config.toml
benches/: network_bench.rs
config/: testnet.toml
deploy/: bootstrap.sh  health_check.sh  node_config.sh
docs/: API.md  ARCHITECTURE.md  CONSENSUS.md  DEPLOYMENT.md  DEVELOPMENT.md  P2P.md  PHASE5_PLAN.md  PRIVACY.md  ROADMAP.md
examples/: find_genesis_nonce.rs  monitor.rs  node.rs  p2p_test.rs  rxbench.rs  verify_bench.rs
src/: lib.rs
src/consensus/: block.rs  chain.rs  difficulty.rs  merkle.rs  mod.rs  params.rs  transaction.rs  transaction_v2_tests.rs  utxo.rs  validation.rs
src/crypto/: commitments.rs
src/dashboard/: mod.rs  stats.rs  ui.rs
src/mining/: miner.rs  mod.rs
src/network/: addrman.rs  batch.rs  connection.rs  diagnostics.rs  discovery.rs  dos.rs  handshake.rs  keepalive.rs  listener.rs  manager.rs  mempool.rs  message.rs  mod.rs  peer.rs  protocol.rs  ratelimit.rs  recovery.rs  relay.rs  security.rs  (+3 more)
tests/: adversarial.rs  block_tests.rs  chain_tests.rs  difficulty_tests.rs  hash_tests.rs  merkle_tests.rs  mining_tests.rs  network_dos_tests.rs  network_integration.rs  network_params_tests.rs  network_performance_tests.rs  network_security_tests.rs  network_simulation_tests.rs  network_validation_tests.rs  p2p_integration.rs  rpc_tests.rs  script_tests.rs  serialize_tests.rs  sighash_tests.rs  storage_blocks_tests.rs  storage_chain_state_tests.rs  storage_integration_tests.rs  storage_utxo_tests.rs  transaction_tests.rs  utxo_tests.rs  validation_tests.rs  varint_tests.rs
web/: ferrous-explorer.html  ferrous-network.html  ferrous-otc.html  ferrous-pool.html  index.html  shared-styles.css  shared-utils.js
(+29 files in other folders)
