[package]
name = "ferrous-node"
version = "0.1.0"
edition = "2021"
authors = ["Chronocoder"]

[dependencies]
sha2 = "0.10"
secp256k1 = { version = "0.29", features = ["global-context", "rand"] }
rand = "0.8"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
rayon = "1.10"
num_cpus = "1.16"
rocksdb = "0.22"
bincode = "1.3"
bs58 = "0.5"
ripemd = "0.1"

[dev-dependencies]
tempfile = "3.10"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
